kubernetes/apps/observability/cupdate/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cupdate
  namespace: observability
  annotations:
    external-dns.alpha.kubernetes.io/target: "internal.${SECRET_DOMAIN}"
spec:
  ingressClassName: internal
  rules:
    - host: &host "cupdate.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cupdate
                port:
                  number: 8080
